--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,20 +3,59 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    height: 100vh;
+    width: 100vw;
 }
 
 body {
-    min-width: 400px;
-    max-width: 1000px;
-    height: 100vh;
     background: black url('../img/fundo-madeira.jpg') center no-repeat;
     background-size: cover;
+    
 }
 
-img {
+main {
+    height: 100vh;
+    position: relative;
+}
+
+section#telefone {
     position: absolute;
-    height: 600px;   
-    top: 50%;
+    top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    
+    height: 627px;
+    width:311px;
+    background:url('../img/frame-iphone.png') no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border:2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-3px,-3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transform 0.4s, border 0.5s;
 }
